Removed fixed background statement, make background jump

--- a/themes/aarsberetning2011/sass/aarsberetning2011.scss
+++ b/themes/aarsberetning2011/sass/aarsberetning2011.scss
@@ -263,7 +263,6 @@ body {
     position: absolute;
     right: 0;
     top: 7em;
-    background-attachment: fixed;
     .zone-content-wrapper {
       background: url('../images/e-reolen.jpg') no-repeat;
       @include background-size(cover);
